--- a/dashboard.html
+++ b/dashboard.html
@@ -32,9 +32,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+<!-- ----binni logo----- -->
+        <a href="#"><img class="navbar-brand" id="binni_logo" src="img/binni_logo.png"></a>
 
-        <img class="navbar-brand" id="binni_logo" src="img/binni_logo.png">
-        <!-- <a class="navbar-brand" href="img/binni_logo.png">Brand</a> -->
       </div>
 
       <!-- Anything inside of collapse navbar-collapse goes into the "hamburger" -->
@@ -69,14 +69,17 @@
     <!-- END OF NAVBAR -->
 
 <!-- BEGIN LEFT SIDEBAR -->
-  <div class="w3-sidebar w3-bar-block" style="width:25%">
-    <a href="#" class="w3-bar-item w3-button">Link 1</a>
-    <a href="#" class="w3-bar-item w3-button">Link 2</a>
-    <a href="#" class="w3-bar-item w3-button">Link 3</a>
+  <div class="container">
+    <div class="sidebar bar-block" style="width:25%">
+      <ul>
+        <li><a href="#" class="sidebar-item">Link 1</a></li>
+        <li><a href="#" class="sidebar-item">Link 2</a></li>
+        <li><a href="#" class="sidebar-item">Link 3</a></li>
+      </ul>
+    </div>
   </div>
 
-  <div style="margin-left: 15%">
-
+  <div style="margin-left: 20%">
 <!-- END OF LEFT SIDEBAR -->
 
 
@@ -97,10 +100,13 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
   </div>
-
-  <footer class=binni-footer align='center'>
-      <span class="footer">© 2017 binni</span>
-  </footer>
+<!-- ------------footer section starts here---- -->
+  <footer class="footer">
+      <div class="container" align="center">
+        <span class="text-muted">© 2017 binni</span>
+      </div>
+    </footer>
+<!-- --------------footer section ends here ------------ -->
 
   <!-- Need to have JQuery and Javascript for DropDown Actions to work (navbar functionality) -->
 
